# My_OrionManipulator

./: .setup_assistant  CMakeLists.txt  README.md
config/: kinematics.yaml  ompl_planning.yaml  sensors_3d.yaml
install/: local_setup.sh  setup.sh
install/orion/lib/orion/: orion_mtc_node  pybullet_follow_joint_trajectory_server.py
install/orion/share/ament_index/resource_index/package_run_dependencies/: orion
install/orion/share/orion/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/orion/share/orion/cmake/: orionConfig.cmake
install/orion/share/orion/config/: joint_limits.yaml  moveit_controllers.yaml  orion.srdf  urdf.rviz
install/orion/share/orion/launch/: moveit.rviz
install/orion/share/orion/meshes/: Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link8.STL  base_link.STL
install/orion/share/orion/urdf/: orion.urdf
launch/: moveit_pybullet.launch.py  mtc_grasp.launch.py
log/: latest_build
meshes/: Link1.STL  Link6.STL  Link7.STL
src/: orion_mtc_node.cpp
urdf/: orion.csv
